--- a/WebApplication.Arch/Views/Category/AddCategory.cshtml
+++ b/WebApplication.Arch/Views/Category/AddCategory.cshtml
@@ -13,6 +13,7 @@
     if (Model != null)
     {
         @Html.HiddenFor(model => model.CategoryID)
+        @Html.HiddenFor(model => model.RowVersion)
     }
 
     <div class="modal-body">
